test/tests/compiler/8_loops/invalid_parse/plx1_loop_post_no_block_3.plx
pub fn main(none) i32 {
    i: i32 = 0
    loop .. i = i + 1 return 0
}
